--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -1,5 +1,6 @@
 <div class="container row poppadiv">
   <div class="container row profile" >
+
     <div class="container locationwrapper">
       <img class="profileimage" [src]=stylistProfile.image_url />
       <h5>You can find me @</h5>
@@ -30,11 +31,15 @@
       </div>
     </div>
   </div>
+
   <button (click)="toggleModal()">Request a cut</button>
 </div>
-<div *ngIf="isShowModal" class="container row wrapper">
+
+<div class="container row modalWrapper" [style.display]="getStyle()">
   <form #directMessage="ngForm">
     <div class="container row modalContent">
+      <span class="close" (click)="toggleModal()">&times;</span>
+      <h5>Send a message</h5>
       <div class="row location modeitem">
         Location: <input name="location" ngModel/>
       </div>
@@ -46,8 +51,36 @@
         <textarea name="body" ngModel>Body of the message</textarea>
         <button (click)="submitMessage(directMessage.value)">Send</button>
       </div>
-      <div class=" row button">
-      </div>
     </div>
   </form>
 </div>
+
+
+<script>
+
+<!--
+var modal = document.getElementById('modalWrapper');
+
+console.log(modal);
+// // Get the button that opens the modal
+// var btn = document.getElementById("myBtn");
+
+// // Get the <span> element that closes the modal
+// var span = document.getElementsByClassName("close")[0];
+
+// // When the user clicks on the button, open the modal
+// btn.onclick = function() {
+//     modal.style.display = "block";
+// }
+
+// // When the user clicks on <span> (x), close the modal
+// span.onclick = function() {
+//     modal.style.display = "none";
+// }
+
+// // When the user clicks anywhere outside of the modal, close it
+// window.onclick = function(event) {
+//     if (event.target == modal) {
+//         modal.style.display = "none";
+//     }
+</script>
