--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -30,14 +30,13 @@
         <a href="stylistProfile.site_url">{{stylistProfile.site_url}}</a>
       </div>
     </div>
+    <button (click)="toggleModal()">Request a cut</button>
   </div>
-
-  <button (click)="toggleModal()">Request a cut</button>
 </div>
 
 <div class="container row modalWrapper" [style.display]="getStyle()">
-  <form #directMessage="ngForm">
-    <div class="container row modalContent">
+  <form #directMessage="ngForm" class="container row modalContent">
+    <div class="container row miniWrapper">
       <span class="close" (click)="toggleModal()">&times;</span>
       <h5>Send a message</h5>
       <div class="row location modeitem">
@@ -55,32 +54,3 @@
   </form>
 </div>
 
-
-<script>
-
-<!--
-var modal = document.getElementById('modalWrapper');
-
-console.log(modal);
-// // Get the button that opens the modal
-// var btn = document.getElementById("myBtn");
-
-// // Get the <span> element that closes the modal
-// var span = document.getElementsByClassName("close")[0];
-
-// // When the user clicks on the button, open the modal
-// btn.onclick = function() {
-//     modal.style.display = "block";
-// }
-
-// // When the user clicks on <span> (x), close the modal
-// span.onclick = function() {
-//     modal.style.display = "none";
-// }
-
-// // When the user clicks anywhere outside of the modal, close it
-// window.onclick = function(event) {
-//     if (event.target == modal) {
-//         modal.style.display = "none";
-//     }
-</script>
