--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -100,7 +100,7 @@ textarea {
   margin-top: 30px;
   display: none;
   position: fixed;
-  z-index: 1;
+  /*z-index: 1;*/
   left: 0;
   top: 0;
   width: 100%;
@@ -109,13 +109,16 @@ textarea {
   background-color: rgba(173, 216, 230, 0.9);
 }
 
-
 .modalContent {
   border: 2px solid black;
   flex: 1 1;
   width: 400px;
   padding: 10px;
-  margin: 300px;
+  position: absolute;
+  margin-left: -150px;
+  margin-top: -150px;
+  top: 50%;
+  left: 50%;
   background-color: white;
 }
 
