--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="display: flex; flex-wrap: wrap;">
+<!-- <div class="container" style="display: flex; flex-wrap: wrap;">
   <h3 style="text-align: center; align-self: center">Here are the stylists closest to you:</h3>
   <div class="row" style="display: flex; flex-wrap: wrap;">
     <div class="container" style="border: 2px solid; flex: 1 1; width: 30%">
@@ -11,4 +11,6 @@
 
     <customer-map style="flex: 1 1; border: 2px solid black" [coordinates]="currentLocation"></customer-map>
   </div>
-</div>
+</div> -->
+
+{{stylistInformation.name}}
