Remove gender information rendering

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -7,9 +7,9 @@
   <div *ngFor="let style of ['hard', 'coded', 'styles']">
     {{style}}
   </div>
-  <p>Gender:</p>
-  <div *ngIf="stylistProfile.gender==='male'">Male</div>
-  <div *ngIf="stylistProfile.gender==='female'">Female</div>
+  <!-- <p>Gender:</p> -->
+  <!-- <div *ngIf="stylistProfile.gender==='male'">Male</div> -->
+  <!-- <div *ngIf="stylistProfile.gender==='female'">Female</div> -->
   <p>Link to personal site:</p>
   <div>{{stylistProfile.site_url}}</div>
 </div>
