--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -23,6 +23,12 @@
   width: 30%;
 }
 
+.latLong {
+  border-top: 2px solid;
+  height: 50%;
+  width: 100%;
+}
+
 .servicescontainer {
   /*border: 2px solid red;*/
   flex: 1 1;
