--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -1,13 +1,21 @@
-<div class="container row" style="text-align: center">
+<div class="container row">
   <h2>Ding Dong: It's Cut Time</h2>
-</div>
-<div class="container row" style="margin: auto">
-  <h3>Where are you located:</h3>
-  <input
-    placeholder="street address"
-    #streetAddress
-    (change)="handleStreetAddressChange(streetAddress.value)"
-  >
-  <button (click)="showDropDown()">{{currentCustomer}}</button>
-  <customer-dropdown></customer-dropdown>
+  <ul class="nav nav-tabs">
+    <li role="presentation">
+      <h4>Where are you located:</h4>
+    </li>
+    <li role="presentation">
+      <input
+        placeholder="street address"
+        #streetAddress
+        (change)="handleStreetAddressChange(streetAddress.value)"
+      >
+    </li>
+    <li role="presentation">
+      <button (click)="showDropDown()">{{currentCustomer}}</button>
+    </li>
+    <li>
+      <customer-dropdown></customer-dropdown>
+    </li>
+  </ul>
 </div>
