--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,15 +1,20 @@
-<div class="container row">
-  <customer-navbar></customer-navbar>
-  <!-- <customer-dropdown></customer-dropdown> -->
-</div>
-<div class="container row">
-  Here are the stylists closest to you:
-  <div *ngFor="let stylist of stylistsCloseToYou">
-    <close-to-you
-      [stylistInformation]="stylist"
-      [routerLink]="['/stylistProfile', stylist.id]"
-    ></close-to-you>
+<div *ngIf="!!isProfileFetched">
+  <div class="container row">
+    <customer-navbar
+      [customerId]="customerProfile.id"
+    >
+    </customer-navbar>
+    <!-- <customer-dropdown></customer-dropdown> -->
   </div>
-  <!-- <customer-map [coordinates]="currentLocation"></customer-map> -->
-  <button (click)="getLocation()">See Coordinates</button>
-<!-- </div> -->
+  <div class="container row">
+    Here are the stylists closest to you:
+    <div *ngFor="let stylist of stylistsCloseToYou">
+      <close-to-you
+        [stylistInformation]="stylist"
+        [routerLink]="['/stylistProfile', stylist.id]"
+      ></close-to-you>
+    </div>
+    <!-- <customer-map [coordinates]="currentLocation"></customer-map> -->
+    <button (click)="getLocation()">See Coordinates</button>
+  <!-- </div> -->
+</div>
