align nav bar component

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -7,7 +7,7 @@
   <div *ngFor="let stylist of stylistsCloseToYou">
     <close-to-you
       [stylistInformation]="stylist"
-      [routerLink]="['/stylistProfile', stylist.id]"
+      [routerLink]="['/stylistProfile/', stylist.id]"
     ></close-to-you>
   </div>
   <!-- <customer-map [coordinates]="currentLocation"></customer-map> -->
