--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -1,17 +1,20 @@
 .poppaDiv {
-  border: 2px solid yellow;
-  width: 1000px;
+  border-bottom: 2px solid;
+  height: 10vh;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .container-fluid,
 .miniContainer {
-  border: 2px solid red;
+  /*border: 2px solid red;*/
   width: 100%;
   height: 25%;
 }
 
 .superNav {
-  border: 2px solid;
+/*  border: 2px solid;*/
   width: 100%;
 }
