--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -31,28 +31,30 @@
           <a href="stylistProfile.site_url">{{stylistProfile.site_url}}</a>
         </div>
       </div>
-      <button (click)="toggleModal()">Request a cut</button>
+      <div>
+        <button (click)="toggleModal()">Request a cut</button>
+      </div>
     </div>
   </div>
 </div>
 
-  <div class="container row modalWrapper" [style.display]="getStyle()">
-    <form #directMessage="ngForm" class="container row modalContent">
-      <span (click)="toggleModal()">&times;</span>
-      <div class="container row miniWrapper">
-        <h4>Send a message</h4>
-        <div class="row location modeitem">
-          Location: <input name="location" ngModel/>
-        </div>
-        <div class="row heading modeitem">
-          <input name="subjectHeading" placeholder="Subject Heading" ngModel/>
-          Time: <input name="time" ngModel />
-        </div>
-        <div class="row message modeitem">
-          <textarea name="body" ngModel>Body of the message</textarea>
-          <button (click)="submitMessage(directMessage.value)">Send</button>
-        </div>
+<div class="container row modalWrapper" [style.display]="getStyle()">
+  <form #directMessage="ngForm" class="container row modalContent">
+    <span (click)="toggleModal()">&times;</span>
+    <div class="container row miniWrapper">
+      <h4>Send a message</h4>
+      <div class="row location modeitem">
+        Location: <input name="location" ngModel/>
       </div>
-    </form>
-  </div>
+      <div class="row heading modeitem">
+        <input name="subjectHeading" placeholder="Subject Heading" ngModel/>
+        Time: <input name="time" ngModel />
+      </div>
+      <div class="row message modeitem">
+        <textarea name="body" ngModel>Body of the message</textarea>
+        <button (click)="submitMessage(directMessage.value)">Send</button>
+      </div>
+    </div>
+  </form>
 </div>
+
