implement navbar on messages component

--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
@@ -1,3 +1,4 @@
-<h1>customer messge compomnent</h1>
-<customer-dropdown></customer-dropdown>
+<!-- <h1>customer messge compomnent</h1>
+<customer-dropdown></customer-dropdown> -->
+<customer-navbar></customer-navbar>
 <customer-inbox [messages]="messages"></customer-inbox>
