implement name at the top of the stylist profile component

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -28,7 +28,7 @@
                   <ul class="dropdownUl">
                     <li [routerLink]="['/home']">Home</li>
                     <li [routerLink]="['/messages']">Message</li>
-                    <li [routerLink]="['/customerProfile']">Settings</li>
+                    <li [routerLink]="['/customerProfile', customerId]">Settings</li>
                     <li [routerLink]="['/login']">Logout</li>
                   </ul>
                 </div>
