--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,3 +1,4 @@
+<customer-navbar></customer-navbar>
 <div *ngIf="!!isProfileFetched">
   <h1>{{customerProfile.name}}'s profile</h1>
   <img [src]=customerProfile.image_url />
