--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -1,11 +1,19 @@
 .poppadiv {
-  border: 10px solid black;
+  border: 7px solid black;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+  height: 50vh;
+  width: 95%;
+  margin: 20px;
+}
+
+.name {
   width: 100%;
+  height: 10%;
+  flex: 1 1;
 }
 
 .profile {
