shrink the size of the stylist profile component

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -10,7 +10,8 @@
         <h4>You can find me @</h4>
         <div class="container row latLong">
           <!-- Longitude: {{stylistProfile.longitude}}, Latitude: {{stylistProfile.latitude}} -->
-          {{ stylistProfile.billingaddress }}
+          <p>{{ stylistProfile.billingaddress }}</p>
+          <p>{{ stylistProfile.phonenumber }}</p>
         </div>
       </div>
 
