--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -21,19 +21,19 @@
               <button class="btn btn-default" (click)="showDropDown()">{{currentCustomer}}</button>
             </form>
           </li>
-          <!-- <li class="liDropdown"> -->
-            <div class="dropdown">
-              <span class="caret">Username</span>
-                <div class="dropdown-content">
-                  <ul class="dropdownUl">
-                    <li [routerLink]="['/home']">Home</li>
-                    <li [routerLink]="['/messages']">Message</li>
-                    <li [routerLink]="['/customerProfile', customerId]">Settings</li>
-                    <li [routerLink]="['/login']">Logout</li>
-                  </ul>
-                </div>
-            </div>
-          <!-- </li> -->
+
+          <div class="dropdown">
+            <span class="caret">Username</span>
+              <div class="dropdown-content">
+                <ul class="dropdownUl">
+                  <li [routerLink]="['/home']"><h4>Home</h4></li>
+                  <li [routerLink]="['/messages']"><h4>Message</h4></li>
+                  <li [routerLink]="['/customerProfile', customerId]"><h4>Settings</h4></li>
+                  <li [routerLink]="['/login']"><h4>Logout</h4></li>
+                </ul>
+              </div>
+          </div>
+
         </ul>
       </nav>
     </div>
