Add fetch on each booking component to fetch name

--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,4 +1,5 @@
 <h2>Hello world</h2>
+Bookings:
 <div *ngFor="let booking of bookings">
   <booking [bookingInformation]="booking"></booking>
 </div>
