--- a/thesis-app/src/app/stylist/components/booking/booking.component.html
+++ b/thesis-app/src/app/stylist/components/booking/booking.component.html
@@ -1,3 +1,10 @@
-<div>
-  {{bookingInformation.name}}
+<div *ngIf="!!isBookingNameFetched">
+  <div *ngIf="!!bookingInformation.isconfirmed">
+    **color this div green, has been confirmed**{{bookingInformation.name}} - {{bookingInformation.time}} @ {{bookingInformation.location}}
+  </div>
+  <div *ngIf="!bookingInformation.isconfirmed">
+    **color this div red, has not been confirmed**{{bookingInformation.name}} - {{bookingInformation.time}} @ {{bookingInformation.location}}
+    <button (click)="confirmBooking">Confirm this booking</button>
+    <button (click)="deleteBooking">Delete this booking</button>
+  </div>
 </div>
