--- a/thesis-app/src/app/stylist/components/booking/booking.component.html
+++ b/thesis-app/src/app/stylist/components/booking/booking.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="!!isBookingNameFetched">
-  <div *ngIf="!!bookingInformation.isconfirmed">
-    **color this div green, has been confirmed**{{bookingInformation.name}} - {{bookingInformation.time}} @ {{bookingInformation.location}}
+  <div *ngIf="bookingInformation.isconfirmed===1">
+    **color this div green, has been confirmed** {{bookingInformation.name}} at time: {{bookingInformation.time}} at location: {{bookingInformation.location}}
   </div>
-  <div *ngIf="!bookingInformation.isconfirmed">
-    **color this div red, has not been confirmed**{{bookingInformation.name}} - {{bookingInformation.time}} @ {{bookingInformation.location}}
-    <button (click)="confirmBooking">Confirm this booking</button>
-    <button (click)="deleteBooking">Delete this booking</button>
+  <div *ngIf="bookingInformation.isconfirmed===0">
+    **color this div red, has not been confirmed**{{bookingInformation.name}} at time: {{bookingInformation.time}} at location: {{bookingInformation.location}}
+    <button (click)="confirmBooking()">Confirm this booking</button>
+    <button (click)="deleteBooking()">Delete this booking</button>
   </div>
 </div>
