--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -27,7 +27,7 @@
               <div class="dropdown-content">
                 <ul class="dropdownUl">
                   <li [routerLink]="['/home']"><h4>Home</h4></li>
-                  <li [routerLink]="['/messages']"><h4>Message</h4></li>
+                  <li [routerLink]="['/messages']"><h4>Messages</h4></li>
                   <li [routerLink]="['/customerProfile', customerId]"><h4>Settings</h4></li>
                   <li [routerLink]="['/login']"><h4>Logout</h4></li>
                 </ul>
