customer id is now rendered based on the id stored inside of the stateservice file

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,4 +1,4 @@
-<customer-navbar></customer-navbar>
+<customer-navbar [customerId]="customerId"></customer-navbar>
 <div *ngIf="!!isProfileFetched">
   <h1>{{customerProfile.name}}'s profile</h1>
   <img [src]=customerProfile.image_url />
