--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
@@ -1,4 +1,5 @@
 <!-- <h1>customer messge compomnent</h1>
 <customer-dropdown></customer-dropdown> -->
 <customer-navbar ></customer-navbar>
+<h1>Inbox</h1>
 <customer-inbox [messages]="messages"></customer-inbox>
