Add click event to info window on map to navigate stylist profile page

--- a/thesis-app/src/app/customer/components/customer-map/customer-map.component.html
+++ b/thesis-app/src/app/customer/components/customer-map/customer-map.component.html
@@ -14,7 +14,7 @@
         [label]="stylist.label"
         [iconUrl]="icon">
       <sebm-google-map-info-window>
-        <strong>{{stylist.label.text}} Info</strong>
+        <p (click)="goToStylist(stylist.id)"><strong>{{stylist.label.text}} Info</strong></p>
       </sebm-google-map-info-window>
     </sebm-google-map-marker>
   </sebm-google-map>
