--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -3,14 +3,14 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
 }
 
 h2 {
-  padding-left: 20px;
+  padding-left: 2ch;
   text-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
-  width: 30vh;
+  width: 100%;
 }
 .container-fluid,
 .miniContainer {
@@ -29,10 +29,6 @@ h2 {
   align-items: center;
 }
 
-li {
-  /*border: 2px solid blue;*/
-}
-
 li,
 .title {
   width: 40%;
@@ -44,7 +40,7 @@ li,
 }
 
 .form-control {
-  width: 250px;
+  width: 40ch;
 }
 
 .dropdown {
@@ -57,9 +53,9 @@ li,
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 25ch;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  padding: 0ch 3ch 0ch 0ch;
   z-index: 1;
 }
 
