add chat history component and fix get route to return messages grouped by conversation

--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
@@ -1,4 +1,6 @@
 <pre>{{messages | json}}</pre>
 <div *ngFor="let message of messages">
-
+  <div (click)="openHistory.emit($event)">
+  To: {{message.recipient}} <button>Delete</button>
+  </div>
 </div>
