--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
@@ -2,4 +2,5 @@
 <customer-dropdown></customer-dropdown> -->
 <customer-navbar ></customer-navbar>
 <h1>Inbox</h1>
-<customer-inbox [messages]="messages"></customer-inbox>
+<customer-inbox [messages]="messages" (openHistory)="showHistory($event)"></customer-inbox>
+<chat-history></chat-history>
