--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
@@ -1,6 +1,6 @@
 <pre>{{messages | json}}</pre>
-<div *ngFor="let message of messages">
-  <div (click)="openHistory.emit($event)">
-  To: {{message.recipient}} <button>Delete</button>
+<div *ngFor="let conversation of messages">
+  <div (click)="openHistory.emit(conversation)">
+  Conversation with: {{conversation[0].recipient}} <button>Delete</button>
   </div>
 </div>
