--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -9,12 +9,14 @@
           id="username"
           ngModel
           name="username">
+      <br>
       <label for="form-group">Password</label>
         <input
-          type="text"
+          type="password"
           id="password"
           ngModel
           name="password">
+      <br>
       <button
         class="btn btn-primary btn-group"
         type="submit"
