--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -1,1 +1,31 @@
 <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
+
+<div class="container row">
+  <form (ngSubmit)="handleSignup(f)" #f="ngForm">
+    <label for="form-group">Username</label>
+      <input
+        type="text"
+        id="username"
+        ngModel
+        name="username">
+    <br>
+    <label for="form-group">Password</label>
+      <input
+        type="password"
+        id="password"
+        ngModel
+        name="password">
+    <br>
+    <label for="form-group">Email Address</label>
+      <input
+        type="email"
+        id="email"
+        ngModel
+        name="email">
+    <br>
+    <button
+      class="btn btn-primary btn-group"
+      type="submit"
+    >Submit</button>
+  </form>
+</div>
