--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -1,6 +1,6 @@
 <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
 
-<div class="container row">
+<div class="container row poppaDiv">
   <form (ngSubmit)="handleSignup(f)" #f="ngForm">
     <label for="form-group">Username</label>
       <input
