--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -1,7 +1,9 @@
-<registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
-
-<div class="container row poppaDiv">
-  <form (ngSubmit)="handleSignup(f)" #f="ngForm">
+<div class="container poppaDiv">
+  <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
+  <form class="myForm" (ngSubmit)="handleSignup(f)" #f="ngForm">
+    <div>
+      <h3>Please Enter Your User Info</h3>
+    </div>
     <label for="form-group">Username</label>
       <input
         type="text"
