--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -22,6 +22,11 @@
         type="submit"
       >Login</button>
     </form>
+    <button
+      class="btn btn-primary btn-group"
+      type="submit"
+      [routerLink]="['/signupuser']"
+    >User Signup</button>
   </div>
   <!-- <div class="container row" style="padding-top: 20px; padding-bottom: 20px; text-align: center; margin: auto">
 
