--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -5,7 +5,6 @@ h3 {
 .poppaDiv {
   width: 100%;
   height: 80vh;
-  border: 2px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,5 +22,17 @@ h3 {
 }
 
 .spanContainer {
-  border: 2px solid yellow;
+  padding: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.spanContainer > * {
+  flex: 1 1 25%;
+  padding: .25em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
